# ipv6-in-real-life

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.yaml  cron.yaml  manual_generate.py  pyproject.toml  requirements.txt  setup.cfg  taplo.toml  wsgi.py
.devcontainer/: devcontainer.json  devcontainer.json.license
.github/workflows/: pre-commit.yml  publish.yml
appengine/: resolve-and-stats.py
appengine/data/gb/: bank.json  groceries.json  telco.json  transport.json
appengine/data/it/: bank.json  telco.json  transport.json  utility.json
appengine/data/xx/: validation_test.json
appengine/templates/: index.md
ipv6_in_real_life/: data_input.py  data_structures.py  json.py  observability.py  render.py
ipv6_in_real_life/data/cz/: bank.json  bank.json.license  bank.toml  groceries.json  groceries.toml  telco.json  telco.toml  transport.json  transport.toml  utility.json  utility.toml
ipv6_in_real_life/data/de/: bank.toml
ipv6_in_real_life/data/fr/: bank.json  bank.json.license  bank.toml
ipv6_in_real_life/data/gb/: bank.json  bank.json.license  bank.toml  groceries.json  groceries.toml  logistics.toml  medical.json  medical.json.license  medical.toml  telco.json  telco.toml  transport.json  transport.toml  utility.json  utility.toml
ipv6_in_real_life/data/ie/: bank.json  bank.toml  groceries.json  groceries.toml  medical.json  medical.toml  telco.json  telco.toml  transport.json  transport.toml  utility.json  utility.toml
ipv6_in_real_life/templates/: details.md  index.md
utils/: json_to_toml.py
(+40 files in other folders)
