# SPDX-FileCopyrightText: 2021 Diego Elio Pettenò
#
# SPDX-License-Identifier: 0BSD

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipv6-in-real-life"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiodns",
  "click",
  "click-log",
  "cmarkgfm",
  "jinja2",
  "pycountry",
  "prometheus-client",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
